- BREAKING: A number of APIs have been renamed for conformance with common .NET naming guidelines:
  - A number of protected members have been renamed from _foo to Foo:
    - AbstractListBackedBoundedList._list => .List
    - ImmutableView<T>._items => .Items (this property has also been made read-only)
    - MultiDictionaryMode.AVL => .Avl
    - BinaryTree<TKey, TValue._comparer => .Comparer
    - AbstractTrie<TKey, TValue, TBit>._keyMapper => .KeyMapper
    - AbstractTrie<TKey, TValue, TBit>._root => .Root
  - The class AVLTree has been renamed to AvlTree
  - Calling MultiDictionary.Add/Remove/Contains(<KeyValuePair<TKey, TValue>>item) with an item with a a null key now throws an ArgumentException rather than an ArgumentNullException

1.10.0
------

- BUGFIX: Fix for memory usage on remove from MultiDictionary. When removing from a MultiDictionary check if the tree used for the hash code is now empty and if so remove that tree.

1.9.0
-----

- Added support for netstandard 2.0 framework.

1.8.0
-----

- Added support for the netstandard1.0 framework. Due to the lack of the Thread class on this framework, the class VDS.Common.References.ThreadIsolatedReference is not supported on this framework.
- netstandard assemblies are now signed. Thanks to @amardeepsingh for the PR.

1.7.0
-----

- Added .NET Core build targeting the netstandard1.4 framework
- Changed build system to Cake (http://cakebuild.net/)
- Added API documentation to the build (using Sandcastle Help File Builder)


1.6.0
-----

- Bloom Filter improvements
 - Refactored the interfaces slightly
 - Refactored base implementations for better code reuse
 - Three hashing approaches are now available:
  - Naive - the existing implementation that gives full control to devlopers
  - Fast - uses approach from http://citeseer.ist.psu.edu/viewdoc/download?doi=10.1.1.152.579&rep=rep1&type=pdf
  - Hybrid - uses a hybrid of the naive and fast approaches
- Collection improvements